--- a/app/editor-components/editor/editor.css
+++ b/app/editor-components/editor/editor.css
@@ -38,7 +38,7 @@
 }
 
 .react-contextmenu-glyph {
-	float: 'right'
+	float: right;
 }
 
 .react-contextmenu-glyph:hover {
@@ -66,6 +66,7 @@
 	border-bottom: 1px solid rgba(0,0,0,.15);
 	cursor: inherit;
 }
+
 .react-contextmenu-item--divider:hover {
 	background-color: transparent;
 	border-color: rgba(0,0,0,.15);
@@ -74,9 +75,6 @@
 .react-contextmenu-item.react-contextmenu-submenu {
 	padding: 0;
 	min-width: 250px;
-}
-
-.react-contextmenu-item.react-contextmenu-submenu > .react-contextmenu-item {
 }
 
 .react-contextmenu-item.react-contextmenu-submenu > .react-contextmenu-item:after {
