--- a/app/components/match-list-question/match_list_question.css
+++ b/app/components/match-list-question/match_list_question.css
@@ -5,9 +5,9 @@
 	background-color: white;
 	flex-direction: column;
 	max-width: 900px;
-	border: 1px solid  rgba(92,92,92,0.6);
+	border: 1px solid  rgba(92, 92, 92, 0.6);
 	border-radius: 6px;
-	box-shadow: 0 0 4px rgba(92,92,92,0.5);
+	box-shadow: 0 0 4px rgba(92, 92, 92, 0.5);
 	margin: 0 auto 10px;
 	margin-bottom: 15px;
 }
@@ -16,7 +16,7 @@
 	font-stretch: extra-expanded;
 	font-weight: 500;
 	color: #2e4468;
-	text-shadow: 0 0 0.1px rgba(92,92,92,0.5);
+	text-shadow: 0 0 0.1px rgba(92, 92, 92, 0.5);
 	margin-bottom: 6px;
 }
 
