--- a/app/components/weather/weather.css
+++ b/app/components/weather/weather.css
@@ -1,13 +1,12 @@
 .weather {
 	width: 580px;
 	background: white;
-	padding: 10px;
 	height: 120px;
 	padding: 3px;
 	margin-bottom: 8px;
-	border: 1px solid rgba(92,92,92,0.6);
+	border: 1px solid rgba(92, 92, 92, 0.6);
 	border-radius: 6px;
-	box-shadow: 0 0 4px rgba(92,92,92,0.5);
+	box-shadow: 0 0 4px rgba(92, 92, 92, 0.5);
 }
 
 .weather-details {
@@ -21,7 +20,6 @@
 	width: 100%;
 	float: left;
 	text-align: left;
-	float: left;
 }
 
 .weather-icon {
@@ -30,19 +28,19 @@
 	height: auto;
 }
 
-.weather-location{
+.weather-location {
 	font-size: 1.3vw;
 	width: 100%;
 }
 
-.weather-place{
+.weather-place {
 	font-size: 1.3vw;
 	padding-left: 10px;
 	color: #2e4468;
 	float: left;
 }
 
-.weather-location-region{
+.weather-location-region {
 	margin-top: 4px;
 	font-size: 1vw;
 	float: left;
@@ -50,7 +48,7 @@
 	vertical-align: sub;
 }
 
-.weather-location-country{
+.weather-location-country {
 	margin-top: 4px;
 	font-size: 1vw;
 	float: left;
@@ -58,21 +56,21 @@
 	vertical-align: sub;
 }
 
-.weather-temperature{
+.weather-temperature {
 	padding-left: 10px;
 	font-size: 1.5vw;
 	float: left;
 	margin-left: 4px;
 }
 
-.weather-temperature-type{
+.weather-temperature-type {
 	font-size: 1vw;
 	margin-left: 2px;
 	vertical-align: super;
 	color: darkred;
 }
 
-.weather-temperature-type:hover{
+.weather-temperature-type:hover {
 	cursor: pointer;
 	color: red;
 }
