--- a/app/app.global.css
+++ b/app/app.global.css
@@ -8,16 +8,21 @@ html {
 
 body {
 	height: 100%;
-	font-family: Source Sans Pro, Helvetica Neue,Helvetica,sans-serif;
+	font-family: Source Sans Pro, Helvetica Neue, Helvetica, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	font-family: Source Sans Pro, Helvetica Neue,Helvetica,sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: Source Sans Pro, Helvetica Neue, Helvetica, sans-serif;
 }
 
 .Resizer {
 	background: #000;
-	opacity: .2;
+	opacity: 0.2;
 	z-index: 1;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -59,10 +64,10 @@ h1, h2, h3, h4, h5, h6 {
 	border-right: 5px solid rgba(0, 0, 0, 0.5);
 }
 
-Resizer.disabled {
+.Resizer .disabled {
 	cursor: not-allowed;
 }
 
-Resizer.disabled:hover {
+.Resizer .disabled:hover {
 	border-color: transparent;
 }
