--- a/app/components/beacon-tooltip/beacon_tooltip.css
+++ b/app/components/beacon-tooltip/beacon_tooltip.css
@@ -48,10 +48,12 @@
 	0% {
 		transform: scale(1);
 	}
+
 	45% {
 		opacity: 0.7;
 		transform: scale(0.75);
 	}
+
 	100% {
 		opacity: 0.9;
 		transform: scale(1);
@@ -62,7 +64,8 @@
 	20% {
 		opacity: 0.9;
 	}
+
 	90% {
-		opacity: 0.7
+		opacity: 0.7;
 	}
 }
