--- a/app/components/panel/panel.css
+++ b/app/components/panel/panel.css
@@ -1,7 +1,7 @@
 .panel {
-	border: 1px solid rgba(92,92,92,0.6);
+	border: 1px solid rgba(92, 92, 92, 0.6);
 	border-radius: 6px;
-	box-shadow: 0 0 4px rgba(92,92,92,0.5);
+	box-shadow: 0 0 4px rgba(92, 92, 92, 0.5);
 	margin: 0 auto 10px;
 	margin-top: 8px;
 	max-width: 900px;
