--- a/app/components/range-picker/_datepicker.css
+++ b/app/components/range-picker/_datepicker.css
@@ -1,45 +1,45 @@
 .SingleDatePicker {
 	position: relative;
-	display: inline-block
+	display: inline-block;
 }
 
 .SingleDatePicker_picker {
 	z-index: 1;
 	background-color: #fff;
-	position: absolute
+	position: absolute;
 }
 
 .SingleDatePicker_picker__rtl {
-	direction: rtl
+	direction: rtl;
 }
 
 .SingleDatePicker_picker__directionLeft {
-	left: 0
+	left: 0;
 }
 
 .SingleDatePicker_picker__directionRight {
-	right: 0
+	right: 0;
 }
 
 .SingleDatePicker_picker__openDown {
-	top: 72px
+	top: 72px;
 }
 
 .SingleDatePicker_picker__openUp {
-	bottom: 72px
+	bottom: 72px;
 }
 
 .SingleDatePicker_picker__portal {
-	background-color: rgba(0,0,0,.3);
+	background-color: rgba(0, 0, 0, 0.3);
 	position: fixed;
 	top: 0;
 	left: 0;
 	height: 100%;
-	width: 100%
+	width: 100%;
 }
 
 .SingleDatePicker_picker__fullScreenPortal {
-	background-color: #fff
+	background-color: #fff;
 }
 
 .SingleDatePicker_closeButton {
@@ -54,32 +54,32 @@
 	top: 0;
 	right: 0;
 	padding: 15px;
-	z-index: 2
+	z-index: 2;
 }
 
 .SingleDatePicker_closeButton:focus,
 .SingleDatePicker_closeButton:hover {
 	color: darken(#cacccd,10%);
-	text-decoration: none
+	text-decoration: none;
 }
 
 .SingleDatePicker_closeButton_svg {
 	height: 15px;
 	width: 15px;
-	fill: #cacccd
+	fill: #cacccd;
 }
 
 .SingleDatePickerInput {
 	background-color: #fff;
-	border: 1px solid #dbdbdb
+	border: 1px solid #dbdbdb;
 }
 
 .SingleDatePickerInput__rtl {
-	direction: rtl
+	direction: rtl;
 }
 
 .SingleDatePickerInput__disabled {
-	background-color: #f2f2f2
+	background-color: #f2f2f2;
 }
 
 .SingleDatePickerInput_clearDate {
@@ -93,24 +93,24 @@
 	display: inline-block;
 	vertical-align: middle;
 	padding: 10px;
-	margin: 0 10px 0 5px
+	margin: 0 10px 0 5px;
 }
 
 .SingleDatePickerInput_clearDate:focus,
 .SingleDatePickerInput_clearDate:hover {
 	background: #dbdbdb;
-	border-radius: 50%
+	border-radius: 50%;
 }
 
 .SingleDatePickerInput_clearDate__hide {
-	visibility: hidden
+	visibility: hidden;
 }
 
 .SingleDatePickerInput_clearDate_svg {
 	fill: #82888a;
 	height: 12px;
 	width: 15px;
-	vertical-align: middle
+	vertical-align: middle;
 }
 
 .SingleDatePickerInput_calendarIcon {
@@ -124,58 +124,58 @@
 	display: inline-block;
 	vertical-align: middle;
 	padding: 10px;
-	margin: 0 5px 0 10px
+	margin: 0 5px 0 10px;
 }
 
 .SingleDatePickerInput_calendarIcon_svg {
 	fill: #82888a;
 	height: 15px;
 	width: 14px;
-	vertical-align: middle
+	vertical-align: middle;
 }
 
 .DateRangePicker {
 	position: relative;
-	display: inline-block
+	display: inline-block;
 }
 
 .DateRangePicker_picker {
 	z-index: 1;
 	background-color: #fff;
-	position: absolute
+	position: absolute;
 }
 
 .DateRangePicker_picker__rtl {
-	direction: rtl
+	direction: rtl;
 }
 
 .DateRangePicker_picker__directionLeft {
-	left: 0
+	left: 0;
 }
 
 .DateRangePicker_picker__directionRight {
-	right: 0
+	right: 0;
 }
 
 .DateRangePicker_picker__openDown {
-	top: 72px
+	top: 72px;
 }
 
 .DateRangePicker_picker__openUp {
-	bottom: 72px
+	bottom: 72px;
 }
 
 .DateRangePicker_picker__portal {
-	background-color: rgba(0,0,0,.3);
+	background-color: rgba(0, 0, 0, 0.3);
 	position: fixed;
 	top: 0;
 	left: 0;
 	height: 100%;
-	width: 100%
+	width: 100%;
 }
 
 .DateRangePicker_picker__fullScreenPortal {
-	background-color: #fff
+	background-color: #fff;
 }
 
 .DateRangePicker_closeButton {
@@ -190,62 +190,62 @@
 	top: 0;
 	right: 0;
 	padding: 15px;
-	z-index: 2
+	z-index: 2;
 }
 
 .DateRangePicker_closeButton:focus,
 .DateRangePicker_closeButton:hover {
 	color: darken(#cacccd,10%);
-	text-decoration: none
+	text-decoration: none;
 }
 
 .DateRangePicker_closeButton_svg {
 	height: 15px;
 	width: 15px;
-	fill: #cacccd
+	fill: #cacccd;
 }
 
 .DayPicker {
 	background: #fff;
 	position: relative;
-	text-align: left
+	text-align: left;
 }
 
 .DayPicker__horizontal {
 	background: #fff;
-	box-shadow: 0 2px 6px rgba(0,0,0,.05),0 0 0 1px rgba(0,0,0,.07);
-	border-radius: 3px
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(0, 0, 0, 0.07);
+	border-radius: 3px;
 }
 
 .DayPicker__verticalScrollable {
-	height: 100%
+	height: 100%;
 }
 
 .DayPicker__hidden {
-	visibility: hidden
+	visibility: hidden;
 }
 
 .DayPicker_portal__horizontal {
 	box-shadow: none;
 	position: absolute;
 	left: 50%;
-	top: 50%
+	top: 50%;
 }
 
 .DayPicker_portal__vertical {
-	position: initial
+	position: initial;
 }
 
 .DayPicker_focusRegion {
-	outline: 0
+	outline: 0;
 }
 
 .DayPicker_weekHeaders {
-	position: relative
+	position: relative;
 }
 
 .DayPicker_weekHeaders__horizontal {
-	margin-left: 9px
+	margin-left: 9px;
 }
 
 .DayPicker_weekHeader {
@@ -254,11 +254,11 @@
 	top: 62px;
 	z-index: 2;
 	padding: 0 13px;
-	text-align: left
+	text-align: left;
 }
 
 .DayPicker_weekHeader__vertical {
-	left: 50%
+	left: 50%;
 }
 
 .DayPicker_weekHeader__verticalScrollable {
@@ -269,35 +269,35 @@
 	margin-left: 0;
 	left: 0;
 	width: 100%;
-	text-align: center
+	text-align: center;
 }
 
 .DayPicker_weekHeader_ul {
 	list-style: none;
 	margin: 1px 0;
 	padding-left: 0;
-	padding-right: 0
+	padding-right: 0;
 }
 
 .DayPicker_weekHeader_li {
 	display: inline-block;
-	text-align: center
+	text-align: center;
 }
 
 .DayPicker_transitionContainer {
 	position: relative;
 	overflow: hidden;
-	border-radius: 3px
+	border-radius: 3px;
 }
 
 .DayPicker_transitionContainer__horizontal {
-	-webkit-transition: height .2s ease-in-out;
-	-moz-transition: height .2s ease-in-out;
-	transition: height .2s ease-in-out
+	-webkit-transition: height 0.2s ease-in-out;
+	-moz-transition: height 0.2s ease-in-out;
+	transition: height 0.2s ease-in-out;
 }
 
 .DayPicker_transitionContainer__vertical {
-	width: 100%
+	width: 100%;
 }
 
 .DayPicker_transitionContainer__verticalScrollable {
@@ -308,7 +308,7 @@
 	bottom: 0;
 	right: 0;
 	left: 0;
-	overflow-y: scroll
+	overflow-y: scroll;
 }
 
 .DayPickerKeyboardShortcuts_buttonReset {
@@ -320,69 +320,70 @@
 	line-height: normal;
 	overflow: visible;
 	padding: 0;
-	cursor: pointer
+	cursor: pointer;
 }
 
 .DayPickerKeyboardShortcuts_buttonReset:active {
-	outline: 0
+	outline: 0;
 }
+
 .DayPickerKeyboardShortcuts_show {
 	width: 22px;
 	position: absolute;
-	z-index: 2
+	z-index: 2;
 }
 
 .DayPickerKeyboardShortcuts_show__bottomRight {
 	border-top: 26px solid transparent;
 	border-right: 33px solid #00a699;
 	bottom: 0;
-	right: 0
+	right: 0;
 }
 
 .DayPickerKeyboardShortcuts_show__bottomRight:hover {
-	border-right: 33px solid #008489
+	border-right: 33px solid #008489;
 }
 
 .DayPickerKeyboardShortcuts_show__topRight {
 	border-bottom: 26px solid transparent;
 	border-right: 33px solid #00a699;
 	top: 0;
-	right: 0
+	right: 0;
 }
 
 .DayPickerKeyboardShortcuts_show__topRight:hover {
-	border-right: 33px solid #008489
+	border-right: 33px solid #008489;
 }
 
 .DayPickerKeyboardShortcuts_show__topLeft {
 	border-bottom: 26px solid transparent;
 	border-left: 33px solid #00a699;
 	top: 0;
-	left: 0
+	left: 0;
 }
 
 .DayPickerKeyboardShortcuts_show__topLeft:hover {
-	border-left: 33px solid #008489
+	border-left: 33px solid #008489;
 }
 
 .DayPickerKeyboardShortcuts_showSpan {
 	color: #fff;
-	position: absolute
+	position: absolute;
 }
 
 .DayPickerKeyboardShortcuts_showSpan__bottomRight {
 	bottom: 0;
-	right: -28px
+	right: -28px;
 }
 
 .DayPickerKeyboardShortcuts_showSpan__topRight {
 	top: 1px;
-	right: -28px
+	right: -28px;
 }
 
 .DayPickerKeyboardShortcuts_showSpan__topLeft {
 	top: 1px;
-	left: -28px
+	left: -28px;
 }
 
 .DayPickerKeyboardShortcuts_panel {
@@ -397,57 +398,62 @@
 	left: 0;
 	z-index: 2;
 	padding: 22px;
-	margin: 33px
+	margin: 33px;
 }
 
 .DayPickerKeyboardShortcuts_title {
 	font-size: 16px;
 	font-weight: 700;
-	margin: 0
+	margin: 0;
 }
 
 .DayPickerKeyboardShortcuts_list {
 	list-style: none;
-	padding: 0
+	padding: 0;
 }
 
 .DayPickerKeyboardShortcuts_close {
 	position: absolute;
 	right: 22px;
 	top: 22px;
-	z-index: 2
+	z-index: 2;
 }
 
 .DayPickerKeyboardShortcuts_close:active {
-	outline: 0
+	outline: 0;
 }
+
 .DayPickerKeyboardShortcuts_closeSvg {
 	height: 15px;
 	width: 15px;
-	fill: #cacccd
+	fill: #cacccd;
 }
+
 .DayPickerKeyboardShortcuts_closeSvg:focus,
 .DayPickerKeyboardShortcuts_closeSvg:hover {
-	fill: #82888a
+	fill: #82888a;
 }
+
 .KeyboardShortcutRow {
 	list-style: none;
-	margin: 6px 0
+	margin: 6px 0;
 }
+
 .KeyboardShortcutRow__block {
-	margin-bottom: 16px
+	margin-bottom: 16px;
 }
+
 .KeyboardShortcutRow_keyContainer {
 	display: inline-block;
 	white-space: nowrap;
 	text-align: right;
-	margin-right: 6px
+	margin-right: 6px;
 }
 
 .KeyboardShortcutRow_keyContainer__block {
 	width: auto;
 	text-align: left;
-	display: inline
+	display: inline;
 }
 
 .KeyboardShortcutRow_key {
@@ -455,119 +461,141 @@
 	font-size: 12px;
 	text-transform: uppercase;
 	background: #f2f2f2;
-	padding: 2px 6px
+	padding: 2px 6px;
 }
 
 .KeyboardShortcutRow_action {
 	display: inline;
 	word-break: break-word;
-	margin-left: 8px
+	margin-left: 8px;
 }
 
 .DayPickerNavigation_container {
 	position: relative;
-	z-index: 2
+	z-index: 2;
 }
 
 .DayPickerNavigation_container__vertical {
 	background: #fff;
-	box-shadow: 0 0 5px 2px rgba(0,0,0,.1);
+	box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
 	position: absolute;
 	bottom: 0;
 	left: 0;
 	height: 52px;
-	width: 100%
+	width: 100%;
 }
+
 .DayPickerNavigation_container__verticalScrollable {
-	position: relative
+	position: relative;
 }
+
 .DayPickerNavigation_button {
 	cursor: pointer;
-	line-height: .78;
+	line-height: 0.78;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
-	user-select: none
+	user-select: none;
 }
+
 .DayPickerNavigation_button__default {
 	border: 1px solid #e4e7e7;
 	background-color: #fff;
-	color: #757575
+	color: #757575;
 }
+
 .DayPickerNavigation_button__default:focus,
 .DayPickerNavigation_button__default:hover {
-	border: 1px solid #c4c4c4
+	border: 1px solid #c4c4c4;
 }
+
 .DayPickerNavigation_button__default:active {
-	background: #f2f2f2
+	background: #f2f2f2;
 }
+
 .DayPickerNavigation_button__horizontal {
 	border-radius: 3px;
 	padding: 6px 9px;
 	top: 18px;
-	position: absolute
+	position: absolute;
 }
+
 .DayPickerNavigation_leftButton__horizontal {
-	left: 22px
+	left: 22px;
 }
+
 .DayPickerNavigation_rightButton__horizontal {
-	right: 22px
+	right: 22px;
 }
+
 .DayPickerNavigation_button__vertical {
 	display: inline-block;
 	position: relative;
 	height: 100%;
-	width: 50%
+	width: 50%;
 }
+
 .DayPickerNavigation_button__vertical__default {
-	padding: 5px
+	padding: 5px;
 }
+
 .DayPickerNavigation_nextButton__vertical__default {
-	border-left: 0
+	border-left: 0;
 }
+
 .DayPickerNavigation_nextButton__verticalScrollable {
-	width: 100%
+	width: 100%;
 }
+
 .DayPickerNavigation_svg__horizontal {
 	height: 19px;
 	width: 19px;
-	fill: #82888a
+	fill: #82888a;
 }
+
 .DayPickerNavigation_svg__vertical {
 	height: 42px;
 	width: 42px;
-	fill: #565a5c
+	fill: #565a5c;
 }
+
 .CalendarMonthGrid {
 	background: #fff;
 	text-align: left;
-	z-index: 0
+	z-index: 0;
 }
+
 .CalendarMonthGrid__animating {
-	z-index: 1
+	z-index: 1;
 }
+
 .CalendarMonthGrid__horizontal {
 	position: absolute;
-	left: 9px
+	left: 9px;
 }
+
 .CalendarMonthGrid__vertical {
-	margin: 0 auto
+	margin: 0 auto;
 }
+
 .CalendarMonthGrid__vertical_scrollable {
 	margin: 0 auto;
-	overflow-y: scroll
+	overflow-y: scroll;
 }
+
 .CalendarMonthGrid_month__horizontal {
 	display: inline-block;
 	vertical-align: top;
-	min-height: 100%
+	min-height: 100%;
 }
+
 .CalendarMonthGrid_month__hideForAnimation {
 	position: absolute;
 	z-index: -1;
 	opacity: 0;
-	pointer-events: none
+	pointer-events: none;
 }
+
 .CalendarMonth {
 	background: #fff;
 	text-align: center;
@@ -576,12 +604,12 @@
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
-	user-select: none
+	user-select: none;
 }
 
 .CalendarMonth_table {
 	border-collapse: collapse;
-	border-spacing: 0
+	border-spacing: 0;
 }
 
 .CalendarMonth_caption {
@@ -590,12 +618,12 @@
 	text-align: center;
 	padding-top: 22px;
 	padding-bottom: 37px;
-	caption-side: initial
+	caption-side: initial;
 }
 
 .CalendarMonth_caption__verticalScrollable {
 	padding-top: 12px;
-	padding-bottom: 7px
+	padding-bottom: 7px;
 }
 
 .CalendarDay_container {
@@ -604,13 +632,13 @@
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	color: #565a5c;
-	background: #fff
+	background: #fff;
 }
 
 .CalendarDay_container:hover {
 	background: #e4e7e7;
 	border: 1px double #e4e7e7;
-	color: inherit
+	color: inherit;
 }
 
 .CalendarDay_button {
@@ -628,61 +656,61 @@
 	overflow: visible;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	cursor: pointer
+	cursor: pointer;
 }
 
 .CalendarDay_button:active {
-	outline: 0
+	outline: 0;
 }
 
 .CalendarDay_button__default {
-	cursor: default
+	cursor: default;
 }
 
 .CalendarDay__outside {
 	border: 0;
 	background: #fff;
-	color: #565a5c
+	color: #565a5c;
 }
 
 .CalendarDay__blocked_minimum_nights {
 	background: #fff;
 	border: 1px solid #eceeee;
-	color: #cacccd
+	color: #cacccd;
 }
 
 .CalendarDay__blocked_minimum_nights:active,
 .CalendarDay__blocked_minimum_nights:hover {
 	background: #fff;
-	color: #cacccd
+	color: #cacccd;
 }
 
 .CalendarDay__highlighted_calendar {
 	background: #ffe8bc;
-	color: #565a5c
+	color: #565a5c;
 }
 
 .CalendarDay__highlighted_calendar:active,
 .CalendarDay__highlighted_calendar:hover {
 	background: #ffce71;
-	color: #565a5c
+	color: #565a5c;
 }
 
 .CalendarDay__selected_span {
 	background: #66e2da;
 	border: 1px solid #33dacd;
-	color: #fff
+	color: #fff;
 }
 
 .CalendarDay__selected_span:active,
 .CalendarDay__selected_span:hover {
 	background: #33dacd;
 	border: 1px solid #33dacd;
-	color: #fff
+	color: #fff;
 }
 
 .CalendarDay__last_in_range {
-	border-right: #00a699
+	border-right: #00a699;
 }
 
 .CalendarDay__selected,
@@ -690,20 +718,20 @@
 .CalendarDay__selected:hover {
 	background: #00a699;
 	border: 1px solid #00a699;
-	color: #fff
+	color: #fff;
 }
 
 .CalendarDay__hovered_span,
 .CalendarDay__hovered_span:hover {
 	background: #b2f1ec;
 	border: 1px solid #80e8e0;
-	color: #007a87
+	color: #007a87;
 }
 
 .CalendarDay__hovered_span:active {
 	background: #80e8e0;
 	border: 1px solid #80e8e0;
-	color: #007a87
+	color: #007a87;
 }
 
 .CalendarDay__blocked_calendar,
@@ -711,7 +739,7 @@
 .CalendarDay__blocked_calendar:hover {
 	background: #cacccd;
 	border: 1px solid #cacccd;
-	color: #82888a
+	color: #82888a;
 }
 
 .CalendarDay__blocked_out_of_range,
@@ -719,33 +747,33 @@
 .CalendarDay__blocked_out_of_range:hover {
 	background: #fff;
 	border: 1px solid #e4e7e7;
-	color: #cacccd
+	color: #cacccd;
 }
 
 .DateRangePickerInput {
 	background-color: #fff;
 	border: none;
-	display: inline-block
+	display: inline-block;
 }
 
 .DateRangePickerInput__disabled {
-	background: #f2f2f2
+	background: #f2f2f2;
 }
 
 .DateRangePickerInput__rtl {
-	direction: rtl
+	direction: rtl;
 }
 
 .DateRangePickerInput_arrow {
 	display: inline-block;
-	vertical-align: middle
+	vertical-align: middle;
 }
 
 .DateRangePickerInput_arrow_svg {
 	vertical-align: middle;
 	fill: #565a5c;
 	height: 24px;
-	width: 24px
+	width: 24px;
 }
 
 .DateRangePickerInput_clearDates {
@@ -759,24 +787,24 @@
 	display: inline-block;
 	vertical-align: middle;
 	padding: 10px;
-	margin: 0 10px 0 5px
+	margin: 0 10px 0 5px;
 }
 
 .DateRangePickerInput_clearDates:focus,
 .DateRangePickerInput_clearDates:hover {
 	background: #dbdbdb;
-	border-radius: 50%
+	border-radius: 50%;
 }
 
 .DateRangePickerInput_clearDates__hide {
-	visibility: hidden
+	visibility: hidden;
 }
 
 .DateRangePickerInput_clearDates_svg {
 	fill: #82888a;
 	height: 12px;
 	width: 15px;
-	vertical-align: middle
+	vertical-align: middle;
 }
 
 .DateRangePickerInput_calendarIcon {
@@ -790,14 +818,14 @@
 	display: inline-block;
 	vertical-align: middle;
 	padding: 10px;
-	margin: 0 5px 0 10px
+	margin: 0 5px 0 10px;
 }
 
 .DateRangePickerInput_calendarIcon_svg {
 	fill: #82888a;
 	height: 15px;
 	width: 14px;
-	vertical-align: middle
+	vertical-align: middle;
 }
 
 .DateInput {
@@ -811,47 +839,47 @@
 	position: relative;
 	display: inline-block;
 	width: inherit;
-	vertical-align: middle
+	vertical-align: middle;
 }
 
-.DateInput__withCaret:after,
-.DateInput__withCaret:before {
+.DateInput__withCaret::after,
+.DateInput__withCaret::before {
 	content: "";
 	display: inline-block;
 	position: absolute;
 	bottom: auto;
 	border: 10px solid transparent;
 	left: 22px;
-	z-index: 2
+	z-index: 2;
 }
 
-.DateInput__openUp:before {
+.DateInput__openUp::before {
 	border-bottom: 0;
 	top: -24px;
-	border-top-color: rgba(0,0,0,.1)
+	border-top-color: rgba(0, 0, 0, 0.1);
 }
 
-.DateInput__openUp:after {
+.DateInput__openUp::after {
 	border-bottom: 0;
 	top: -25px;
-	border-top-color: #fff
+	border-top-color: #fff;
 }
 
-.DateInput__openDown:before {
+.DateInput__openDown::before {
 	border-top: 0;
 	top: 62px;
-	border-bottom-color: rgba(0,0,0,.1)
+	border-bottom-color: rgba(0,0,0,.1);
 }
 
 .DateInput__openDown:after {
 	border-top: 0;
 	top: 63px;
-	border-bottom-color: #fff
+	border-bottom-color: #fff;
 }
 
 .DateInput__disabled {
 	background: #f2f2f2;
-	color: #dbdbdb
+	color: #dbdbdb;
 }
 
 .DateInput_input {
@@ -864,14 +892,14 @@
 	border-top: 0;
 	border-right: 0;
 	border-bottom: 2px solid transparent;
-	border-left: 0
+	border-left: 0;
 }
 
 .DateInput_input__readOnly {
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
-	user-select: none
+	user-select: none;
 }
 
 .DateInput_input__focused {
@@ -881,21 +909,21 @@
 	border-top: 0;
 	border-right: 0;
 	border-bottom: 2px solid #008489;
-	border-left: 0
+	border-left: 0;
 }
 
 .DateInput_input__disabled {
 	background: #f2f2f2;
-	font-style: italic
+	font-style: italic;
 }
 
 .DateInput_screenReaderMessage {
 	border: 0;
-	clip: rect(0,0,0,0);
+	clip: rect(0, 0, 0, 0);
 	height: 1px;
 	margin: -1px;
 	overflow: hidden;
 	padding: 0;
 	position: absolute;
-	width: 1px
+	width: 1px;
 }
