--- a/app/components/recorder/recorder.css
+++ b/app/components/recorder/recorder.css
@@ -22,8 +22,8 @@
 	position: absolute;
 	border-radius: 50%;
 	margin-right: 10px;
-	color: rgba(0,0,0,1);
-	border: solid 4px rgb(70,70,70);
+	color: rgba(0, 0, 0, 1);
+	border: solid 4px rgb(70, 70, 70);
 	top: 8px;
 	width: 30px;
 	height: 30px;
@@ -39,7 +39,7 @@
 	font-size: 30px;
 	font-weight: 800;
 	padding-right: 80px;
-	background: rgba(0, 80,255,0.5);
+	background: rgba(0, 80, 255, 0.5);
 }
 
 .recorder-button {
