--- a/app/components/score/progressbar.css
+++ b/app/components/score/progressbar.css
@@ -4,8 +4,8 @@
 	color: white;
 }
 
-.progressbar-range{
-	background-image:linear-gradient(to right, darkgrey, ghostwhite );
+.progressbar-range {
+	background-image: linear-gradient(to right, darkgrey, ghostwhite);
 	width: calc(100% - 20px);
 	height: calc(100% - 16px);
 	margin-left: 10px;
@@ -26,10 +26,11 @@
 
 @keyframes progression {
 	0% {
-		opacity: 1
+		opacity: 1;
 	}
+
 	100% {
-		opacity: 0
+		opacity: 0;
 	}
 }
 
@@ -37,11 +38,8 @@
 	position: absolute;
 	width: calc(100% - 20px);
 	height: calc(100% - 16px);
-	background-image:linear-gradient(to right, red, orange 25%, gold 50%, greenyellow 70%, green 99% );
+	background-image: linear-gradient(to right, red, orange 25%, gold 50%, greenyellow 70%, green 99%);
 	background-repeat: no-repeat;
 	opacity: 0.7;
-	transition: all .8s ease-in-out;
-	/*
-	clip-path: inset(0 2% 0 0);
-	*/
+	transition: all 0.8s ease-in-out;
 }
