--- a/app/components/slider/next_arrow.css
+++ b/app/components/slider/next_arrow.css
@@ -14,17 +14,17 @@
 }
 
 .slider-next-button:hover {
-	background: rgba(175,192,222,1);
+	background: rgba(175, 192, 222, 1);
 	transition: 0.5s;
-	box-shadow: 1px 1px 8px rgba(92,92,92, 1);
+	box-shadow: 1px 1px 8px rgba(92, 92, 92, 1);
 	text-shadow: none;
 	color: black;
 }
 
 .slider-next-button:focus {
 	outline: none;
-	border: 1px solid  rgba(92,92,92, 0.6);
-	box-shadow: 1px 1px 8px rgba(92,92,92, 0.5);
+	border: 1px solid  rgba(92, 92, 92, 0.6);
+	box-shadow: 1px 1px 8px rgba(92, 92, 92, 0.5);
 	text-shadow: none;
 }
 
