--- a/app/editor-components/editor/editor.css
+++ b/app/editor-components/editor/editor.css
@@ -7,8 +7,8 @@
 	text-align: left;
 	background-color: #fff;
 	background-clip: padding-box;
-	border: 1px solid rgba(0,0,0,.15);
-	border-radius: .25rem;
+	border: 1px solid rgba(0, 0, 0, 0.15);
+	border-radius: 0.25rem;
 	outline: none;
 	opacity: 0;
 	pointer-events: none;
@@ -57,19 +57,19 @@
 .react-contextmenu-item.react-contextmenu-item--disabled:hover {
 	color: #878a8c;
 	background-color: transparent;
-	border-color: rgba(0,0,0,.15);
+	border-color: rgba(0, 0, 0, 0.15);
 }
 
 .react-contextmenu-item--divider {
 	margin-bottom: 3px;
 	padding: 2px 0;
-	border-bottom: 1px solid rgba(0,0,0,.15);
+	border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 	cursor: inherit;
 }
 
 .react-contextmenu-item--divider:hover {
 	background-color: transparent;
-	border-color: rgba(0,0,0,.15);
+	border-color: rgba(0, 0, 0, 0.15);
 }
 
 .react-contextmenu-item.react-contextmenu-submenu {
@@ -77,7 +77,7 @@
 	min-width: 250px;
 }
 
-.react-contextmenu-item.react-contextmenu-submenu > .react-contextmenu-item:after {
+.react-contextmenu-item.react-contextmenu-submenu > .react-contextmenu-item::after {
 	content: "▶";
 	display: inline-block;
 	position: absolute;
