--- a/app/components/input/slider/slider.css
+++ b/app/components/input/slider/slider.css
@@ -18,20 +18,18 @@
 	font-size: 16px;
 	padding-top: 4px;
 	padding-bottom: 2px;
-	color: rgb(92,92,92);
+	color: rgb(92, 92, 92);
 	box-shadow: inset 1px 1px 4px  rgba(186, 204, 234, 1);
 }
 
-.slider-number-input:hover{
+.slider-number-input:hover {
 	background: rgba(186, 204, 234, 0.65);
 }
 
 .slider-number-input:focus {
-    background: rgba(204,88,0, 0.16);
-    box-shadow: none
+	background: rgba(204, 88, 0, 0.16);
+	box-shadow: none;
 }
-
-
 
 .slider-range-input {
 	margin-bottom: 4px;
