--- a/app/components/number-survey/number-survey.css
+++ b/app/components/number-survey/number-survey.css
@@ -1,7 +1,7 @@
 .number-survey {
-	border: 1px solid rgba(92,92,92,0.6);
+	border: 1px solid rgba(92, 92, 92, 0.6);
 	border-radius: 6px;
-	box-shadow: 0 0 4px rgba(92,92,92,0.5);
+	box-shadow: 0 0 4px rgba(92, 92, 92, 0.5);
 	margin-top: 10px;
 	margin-right: 10px;
 	margin-bottom: 12px;
