--- a/app/components/statusbar/instructor-view/user_list.css
+++ b/app/components/statusbar/instructor-view/user_list.css
@@ -6,7 +6,7 @@
 }
 
 .user-list-item {
-	cursor: pointer
+	cursor: pointer;
 }
 
 .user-list-item:hover {
@@ -28,6 +28,6 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 	z-index: 2;
 }
