--- a/app/components/collapse/vertical-slider.css
+++ b/app/components/collapse/vertical-slider.css
@@ -5,21 +5,21 @@
 }
 
 .vs-display {
-	transition: all .5s ease-out;
+	transition: all 0.5s ease-out;
 	height: auto;
 	transform-origin: left top;
-	animation: swing-in-top-fwd .5s;
+	animation: swing-in-top-fwd 0.5s;
 }
 
 .vs-hidden {
 	transform: scale(0);
 	height: 0;
-	transition: all .5s ease-out;
-	animation: swing-out-top-fwd .5s;
+	transition: all 0.5s ease-out;
+	animation: swing-out-top-fwd 0.5s;
 }
 
 .vs-titling {
-	color:#ca5800;
+	color: #ca5800;
 	font-size: 40px;
 	font-weight: 700;
 	font-family: Open Sans Condensed;
