--- a/app/components/feedback/feedback.css
+++ b/app/components/feedback/feedback.css
@@ -17,9 +17,9 @@
 
 .feedback-button {
 	cursor: pointer;
-	fill: rgba(92,92,92,0.6);
+	fill: rgba(92, 92, 92, 0.6);
 	transition: 0.3;
-	border:solid 1px rgba(92,92,92,0.4);
+	border: solid 1px rgba(92, 92, 92, 0.4);
 	margin-right: 1px;
 }
 
@@ -30,8 +30,8 @@
 }
 
 .feedback-button-disabled {
-	fill: rgba(92,92,92,0.6);
+	fill: rgba(92 92, 92, 0.6);
 	transition: 0.3;
-	border:solid 1px rgba(92,92,92,0.4);
+	border: solid 1px rgba(92, 92, 92, 0.4);
 	margin-right: 1px;
 }
