--- a/app/components/news/styles.css
+++ b/app/components/news/styles.css
@@ -87,7 +87,7 @@
 
 	border: 1px solid rgba(92,92,92,0.3);
 	border-radius: 6px;
-	box-shadow: 0 0 8px rgba(92,92,92,0.5);
+	box-shadow: 0 0 8px rgba(92, 92, 92, 0.5);
 }
 
 .article img {
