--- a/app/components/range-question/range-question.css
+++ b/app/components/range-question/range-question.css
@@ -1,7 +1,7 @@
 .range-question {
-	border: 1px solid rgba(92,92,92, 0.6);
+	border: 1px solid rgba(92, 92, 92, 0.6);
 	border-radius: 6px;
-	box-shadow: 0 0 8px rgba(92,92,92, 0.5);
+	box-shadow: 0 0 8px rgba(92, 92, 92, 0.5);
 	margin: 0 auto 10px;
 	max-width: 900px;
 }
