--- a/app/components/statusbar/instructor-notes/instructor_notes.css
+++ b/app/components/statusbar/instructor-notes/instructor_notes.css
@@ -1,7 +1,7 @@
 .instructor-notes {
-	border: 1px solid  rgba(92,92,92, 0.6);
+	border: 1px solid rgba(92, 92, 92, 0.6);
 	border-radius: 6px;
-	box-shadow: 0 0 7px rgba(92,92,92, 0.5);
+	box-shadow: 0 0 7px rgba(92, 92, 92, 0.5);
 	margin-bottom: 0px;
 	margin-left: 0px;
 	margin-right: 0px;
