--- a/app/components/markdown-editor/markdown_editor.css
+++ b/app/components/markdown-editor/markdown_editor.css
@@ -1,19 +1,22 @@
 .markdown-editor {
-	border: 1px solid  rgba(92,92,92, 0.6);
+	border: 1px solid rgba(92, 92, 92, 0.6);
 	border-radius: 6px;
-	box-shadow: 0 0 8px rgba(92,92,92, 0.5);
+	box-shadow: 0 0 8px rgba(92, 92, 92, 0.5);
 	margin-bottom: 15px;
 }
 
 .CodeMirror {
 	max-height: 420px;
 }
+
 .CodeMirror-scroll {
 	min-height: 420px;
 	max-height: 420px;
 }
 
-.editor-toolbar.fullscreen, .CodeMirror-fullscreen, .editor-preview-side {
+.editor-toolbar.fullscreen,
+.CodeMirror-fullscreen,
+.editor-preview-side {
 	z-index: 1002 !important;
 	max-height: none;
 }
@@ -33,29 +36,33 @@
 	opacity: 0.6;
 }
 
-.editor-preview-side th, .editor-preview th {
+.editor-preview-side th,
+.editor-preview th {
 	color: #464a4c;
 	background-color: #eceeef;
-	padding: .3rem;
+	padding: 0.3rem;
 	border-top: 1px solid #eceeef;
 	text-align: left;
 	font-weight: bold;
 	display: table-cell;
 }
 
-.editor-preview-side td, .editor-preview td {
-	padding: .3rem;
+.editor-preview-side td,
+.editor-preview td {
+	padding: 0.3rem;
 	vertical-align: top;
 	border-top: 1px solid #eceeef;
 	display: table-cell;
 }
 
-.editor-preview-side thead, .editor-preview thead {
+.editor-preview-side thead,
+.editor-preview thead {
 	display: table-header-group;
 	vertical-align: middle;
 }
 
-.editor-preview-side table, .editor-preview table {
+.editor-preview-side table,
+.editor-preview table {
 	width: 100%;
 	max-width: 100%;
 	margin-bottom: 1rem;
