--- a/app/components/playground/playground.css
+++ b/app/components/playground/playground.css
@@ -4,7 +4,7 @@
 }
 
 .playground {
-	box-shadow: 0px 0px 5px rgba(0,0,0,0.25);
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
 	border-radius: 5px;
 	overflow: hidden;
 	background: #efefef;
@@ -13,7 +13,7 @@
 }
 
 .playground-editable {
-	background: rgb(30,30,30);
+	background: rgb(30, 30, 30);
 	color: gainsboro;
 	text-align: center;
 	font-size: 22px;
