--- a/app/components/score/score.css
+++ b/app/components/score/score.css
@@ -1,6 +1,6 @@
 :root {
 	--bg: rgba(15, 112, 91, 0.9);
-	--bgopac: rgba(15,112,91, 0.66);
+	--bgopac: rgba(15, 112, 91, 0.66);
 	--bgdark: rgba(6, 41, 33, 0.9);
 	--bgopachover:rgba(235, 185, 20, 0.9);
 	--primary: #2e4468;
