--- a/app/components/sketchpad/pdf_viewer.css
+++ b/app/components/sketchpad/pdf_viewer.css
@@ -57,9 +57,13 @@
 	background-color: rgb(0, 100, 0);
 }
 
-.textLayer ::selection { background: rgb(0,0,255); }
+.textLayer ::selection {
+	background: rgb(0, 0, 255);
+}
 
-.textLayer ::-moz-selection { background: rgb(0,0,255); }
+.textLayer ::-moz-selection {
+	background: rgb(0, 0, 255);
+}
 
 .textLayer .endOfContent {
 	display: block;
