--- a/app/components/statusbar/statusbar.css
+++ b/app/components/statusbar/statusbar.css
@@ -164,6 +164,15 @@
 	height: 18px;
 }
 
+#Lesson .statusbar-queue {
+	left: 46px;
+	bottom: 3px;
+	position: absolute;
+	z-index: 2;
+	width: 18px;
+	height: 18px;
+}
+
 #Lesson .statusbar-voice-text {
 	position: absolute;
 	font-size: 12px;
