--- a/app/components/sketchpad/pdf_viewer.css
+++ b/app/components/sketchpad/pdf_viewer.css
@@ -16,23 +16,20 @@
 .textLayer {
 	position: absolute;
 	left: 0;
+	top: 0;
+	right: 0;
 	bottom: 0;
-	height: 100%;
-	width: 100%;
 	overflow: hidden;
-	fill: rgba(255, 0, 0, 0);
+	opacity: 0.2;
 	line-height: 1;
 }
 
-.textLayer > div {
+.textLayer > span {
 	color: transparent;
 	position: absolute;
 	white-space: pre;
 	cursor: text;
 	-webkit-transform-origin: 0% 0%;
-	-moz-transform-origin: 0% 0%;
-	-o-transform-origin: 0% 0%;
-	-ms-transform-origin: 0% 0%;
 	transform-origin: 0% 0%;
 }
 
@@ -59,13 +56,9 @@
 	background-color: rgb(0, 100, 0);
 }
 
-.textLayer ::selection {
-	background: rgb(0, 0, 255);
-}
+.textLayer ::-moz-selection { background: rgb(0, 0, 255); }
 
-.textLayer ::-moz-selection {
-	background: rgb(0, 0, 255);
-}
+.textLayer ::selection { background: rgb(0, 0, 255); }
 
 .textLayer .endOfContent {
 	display: block;
@@ -77,8 +70,9 @@
 	z-index: -1;
 	cursor: default;
 	-webkit-user-select: none;
-	-ms-user-select: none;
 	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .textLayer .endOfContent.active {
