--- a/app/components/sketchpad/sketchpad.css
+++ b/app/components/sketchpad/sketchpad.css
@@ -84,8 +84,9 @@
 	background-color: #ca5800;
 	border-radius: 50%;
 	display: block;
-	height: 8px;
+	height: 10px;
 	opacity: 0;
 	position: absolute;
-	width: 8px;
+	width: 10px;
+	pointer-events: none;
 }
