Update response visualizer

--- a/app/components/response-visualizer/response_visualizer.css
+++ b/app/components/response-visualizer/response_visualizer.css
@@ -7,3 +7,9 @@
 	z-index: 1990;
 	background-color: #000;
 }
+
+.response-visualizer-action-model-text {
+	color: darkred;
+	white-space: pre-wrap;
+	word-wrap: break-word;
+}
