--- a/app/components/data-explorer/data_explorer.css
+++ b/app/components/data-explorer/data_explorer.css
@@ -33,24 +33,22 @@
 
 .data-explorer-draggable-bar {
 	position: absolute;
-	top: 6px;
-	left: 6px;
 	z-index: 2;
 	width: 200px;
 	height: 26px;
 	background-color: rgba(200, 200, 200, 0.5);
-	opacity: 0.3;
-	color: white;
+	opacity: 0.6;
+	color: black;
 	letter-spacing: 5px;
 	text-align: center;
 	cursor: move;
-	padding: 0.1rem 0.3rem;
+	padding: 0.3rem 0.3rem;
 }
 
 .data-explorer-draggable-bar:hover {
 	background-color: rgba(22, 8, 8, 0.8);
 	color: white;
-	opacity: 1;
+	opacity: 0.9;
 }
 
 .outputPanel pre {
