--- a/app/components/plotly/plotly.css
+++ b/app/components/plotly/plotly.css
@@ -6,8 +6,8 @@
 	width: 200px;
 	height: 26px;
 	background-color: rgba(200, 200, 200, 0.5);
-	opacity: 0.3;
-	color: white;
+	opacity: 0.6;
+	color: black;
 	letter-spacing: 5px;
 	text-align: center;
 	cursor: move;
@@ -17,5 +17,5 @@
 .plotly-draggable-bar:hover {
 	background-color: rgba(22, 8, 8, 0.8);
 	color: white;
-	opacity: 1;
+	opacity: 0.9;
 }
