--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -341,14 +341,13 @@ mark {
 .Lesson > h3,
 .Lesson > h4 {
 	max-width: 1200px;
-	margin-left: auto;
-	margin-right: auto;
+	padding-left: 15px;
 }
 
-.Lesson > p {
+.Lesson > p,
+.Lesson > text {
 	max-width: 1200px;
-	margin-left: auto;
-	margin-right: auto;
+	padding-left: 15px;
 }
 
 .Lesson hr {
