--- a/app/components/statusbar/statusbar.css
+++ b/app/components/statusbar/statusbar.css
@@ -164,6 +164,15 @@
 	height: 18px;
 }
 
+#Lesson .statusbar-presentation-mode {
+	left: 72px;
+	bottom: 3px;
+	position: absolute;
+	z-index: 2;
+	width: 18px;
+	height: 18px;
+}
+
 #Lesson .statusbar-queue {
 	left: 46px;
 	bottom: 3px;
@@ -251,4 +260,22 @@
 	margin-left: -35px;
 	margin-top: -18px;
 	float: left;
+}
+
+#unfinished-container {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 2;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+#unfinished-elem {
+	position: absolute;
+	animation: swing-in-right-fwd 1.2s;
+	top: 50%;
+	left: 50%;
+	width: 100%;
 }
